@@ -13,7 +13,8 @@
 	<RULES ESCAPE="\"
 		IGNORE_CASE="TRUE"
 		HIGHLIGHT_DIGITS="TRUE"
-		DIGIT_RE="[[:digit:]]?(px|pt|mm|cm|in|em)">
+		DIGIT_RE="[[:digit:]]?(px|pt|mm|cm|in|em)"
+		NO_WORD_SEP="-">
 
 		<SEQ TYPE="OPERATOR">:</SEQ>
 		<SPAN TYPE="NULL" DELEGATE="LITERAL">
