@@ -5,9 +5,8 @@
 <MODE>
 	<PROPS>
 		<PROPERTY NAME="lineComment" VALUE="#" />
-		<PROPERTY NAME="noWordSep" VALUE="._-" />
 	</PROPS>
-	<RULES HIGHLIGHT_DIGITS="TRUE">
+	<RULES HIGHLIGHT_DIGITS="TRUE" NO_WORD_SEP=".-">
 		<EOL_SPAN TYPE="COMMENT1" AT_LINE_START="TRUE">#</EOL_SPAN>
 		<MARK_PREVIOUS TYPE="KEYWORD1"
 			AT_LINE_START="TRUE" EXCLUDE_MATCH="TRUE">=</MARK_PREVIOUS>
