@@ -28,12 +28,13 @@
 
 <!-- RULES attributes -->
 <!ATTLIST RULES
+	SET CDATA "MAIN"
 	IGNORE_CASE %att-bool; "TRUE"
 	HIGHLIGHT_DIGITS %att-bool; "FALSE"
 	DIGIT_RE CDATA #IMPLIED
-	SET CDATA "MAIN"
 	ESCAPE CDATA #IMPLIED
-	DEFAULT %tokens; "NULL" >
+	DEFAULT %tokens; "NULL"
+	NO_WORD_SEP CDATA "_">
 
 <!-- TERMINATE element -->
 <!ELEMENT TERMINATE EMPTY >
